Changes for discussion.